--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </body>
 
 <script type="text/javascript" src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.21.7.js"></script>
-<script src="../dist/pubnub-js-webrtc.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/pubnub-js-webrtc@latest/dist/pubnub-js-webrtc.js"></script>
 <script src="app.js" type="text/javascript"></script>
 
 </html>
